<resources>
    <string name="app_name">TimerPomodoro</string>
    <string name="quick_pomodoro_settings">Quick pomodoro settings</string>
    <string name="pick_time_of_single_pomodoro">Pick time of single pomodoro</string>
    <string name="pick_quantity_of_pomodoro_in_one_session">Pick quantity of pomodoro in one session</string>
    <string name="application_settings">Application settings</string>
    <string name="application_language">Application language</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="test_text">Test text</string>
    <string name="title_setting">Settings</string>
    <string name="title_pomodoro">Pomodoro</string>
    <string name="title_habits">Habits</string>
    <string name="pomodoro_name_hint">Set your pomodoro name</string>
    <string name="habit_name_set">Habit name</string>
    <string name="pomodoro_time">Select time of one pomodoro</string>
    <string name="pomodoro_quantity">Select quantity of pomodoro sessions</string>
    <string name="pomodoro_quantity_before_long">Quantity of pomodoro before long break</string>
    <string name="time_of_short">Time of short break</string>
    <string name="time_of_long">Time of long break</string>
    <string name="habit_delete">Delete</string>
    <string name="advance_options">Advance options</string>
    <string name="repeat">Repeat?</string>
    <string name="start_pomodoro_timer">Start</string>
    <string name="stop_pomodoro_timer">Stop</string>
    <string name="choose_your_own_icon">Choose your own icon!</string>
    <string name="save_habit">Save habit</string>
    <string name="reset">Reset</string>
    <string name="need_a_break">Need a break?</string>
    <string name="finish">Finish</string>
    <string name="quickpomodorosettings">QuickPomodoro Settings</string>
    <string name="pomodoro_description_hint">Set your pomodoro description</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="quick_pomodoro">Quick Pomodoro</string>
    <string name="settings_time_of_one_pomodoro">Time of one pomodoro</string>
    <string name="settings_quantity_of_pomodoro_section">Quantity of pomodoro section</string>
    <string name="settings_time_of_short_break">Time of short break</string>
    <string name="settings_time_of_long_break">Time of long break</string>
    <string name="settings_quantity_of_pomodoro_before_long_break">Quantity of pomodoro before long break</string>
    <string name="let_s_start_boost_your_productivity">Let\'s start boosting your productivity!</string>
    <string name="add_new_habit">Add new habit</string>
    <string name="start_quick_pomodoro">Start Quick Pomodoro</string>
    <string name="enable_dark_mode_in_pomodoro">Enable dark mode in Pomodoro</string>
    <string name="starting_button">Starting button</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
</resources>